--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     </div>
     <footer>
-        <p>Created by <em><span>Hadis Ghafouri:)</span></em></p>
+        <p>Created by <em><span>Rohit Angadi</span></em></p>
     </footer>
     <script>
         var slidIndex = 1;
